@@ -16,17 +16,11 @@ function [x_out,y_out,F] = forcecal2d(files, viscosity, bead_radius, poleloc, ca
 %        "calib_um" is the microns per pixel calibration factor.
 %  
 %  01/??/05 - created.  
-%  06/16/05 - added documentation.
+%  06/16/05 - added documentation. cleaned up code. fixed bug in
+%  force-distance 1D plot.
 %   
-
     
     video_tracking_constants;
-    
-    % turn off the divide by zero warning because there's a divide by zero
-    % in the determination of the derivative
-	warning off MATLAB:divideByZero;
-    
-    fp = dir(files);
     
     % derivative window size
     window_size = 12;
@@ -34,22 +28,24 @@ function [x_out,y_out,F] = forcecal2d(files, viscosity, bead_radius, poleloc, ca
     % for every file, get its filename and reduce the dataset to a single table.
     d = load_video_tracking(files,[],'pixels',calib_um,'absolute','yes','table');
 	
-	beadID = d(:,ID);
+	max_beadID = max(d(:,ID));
 	
     % for each beadID, compute it's velocity and concatenate it to the
     % current data table as new columns [olddata vel_magnitude vel_angle].
-	for k = 0 : max(beadID)
-        idx = find(beadID == k);
-        temp = d(idx,:);
-        
-        if(length(idx)>window_size) % avoid any gaps in beadID numbers
+	for k = 0 : max_beadID
+
+        temp = get_bead(d, k);
+
+        if(length(temp)>window_size) % avoid taking the derivative for any track 
+                                     % whose number of points is less than the 
+                                     % window size of the derivative.
+
             [dxydt, newt, newxy] = windiff(temp(:,X:Y),temp(:,TIME),window_size);
 		
             vel = dxydt;
             
             velmag = magnitude(vel);
-            velang = angle(vel); 
-            
+
             force = 6*pi*viscosity*bead_radius*velmag*calib_um*1e-6;
 
             % setup the output variables
@@ -68,46 +64,47 @@ function [x_out,y_out,F] = forcecal2d(files, viscosity, bead_radius, poleloc, ca
         end
 	end
 	
-        % do some plotting
-        x = finalxy(:,1);
-		y = finalxy(:,2);
-		z = finalF*1e12;
-        
-        x_out = 1:648; %min(x):range(x)/648:max(x);
-        y_out = 1:484; %min(y):range(y)/484:max(y);
-        
-        myMIP = mip('*.MIP.bmp');
-        
-        warning off MATLAB:griddata:DuplicateDataPoints; 
-		[xi,yi] = meshgrid(x_out, y_out);
-		zi = griddata(x, y, z, xi, yi);
-        
-        
-		figure;
-        subplot(1,2,1);
-        imagesc(myMIP); 
-        colormap(copper(256));
-        hold on;
-			plot(x,y,'.');
-        hold off;
-        axis([0 648 0 484]);
-		xlabel('x [pixels]'); ylabel('y [pixels]'); set(gca, 'YDir', 'reverse');
-        
-        newr = magnitude((x-poleloc(1)),(y-poleloc(2)));
-        subplot(1,2,2);
-        plot(newr-newr(end), z, '.');
-        grid on;
-		xlabel('r'); ylabel('force (pN)');
+    % set up for plotting
+    warning off MATLAB:griddata:DuplicateDataPoints; 
 
-        figure;
-		plot3(finalxy(:,1), finalxy(:,2), finalF, '.');
-        colormap(hot);
-		zlabel('force (pN)');
+    x = finalxy(:,1);
+	y = finalxy(:,2);
+	z = finalF*1e12;
+    
+    x_out = 1:648; 
+    y_out = 1:484; 
+    
+    myMIP = mip('*.MIP.bmp');
+    
+	[xi,yi] = meshgrid(x_out, y_out);
+	zi = griddata(x, y, z, xi, yi);
         
-        figure; 
-		imagesc(x_out,y_out,zi);
-		colormap(hot);
-		colorbar; 
+    % now, for the plots...
+	figure;
+    subplot(1,2,1);
+    imagesc(myMIP); 
+    colormap(copper(256));
+    hold on;
+		plot(x,y,'.');
+    hold off;
+    axis([0 648 0 484]);
+	xlabel('x [pixels]'); ylabel('y [pixels]'); set(gca, 'YDir', 'reverse');
+    
+    newr = magnitude((x-poleloc(1)),(y-poleloc(2)));
+    subplot(1,2,2);
+    plot(newr, z, '.');
+    grid on;
+	xlabel('r'); ylabel('force (pN)');
+
+    figure;
+	plot3(finalxy(:,1), finalxy(:,2), finalF, '.');
+    colormap(hot);
+	zlabel('force (pN)');
+    
+    figure; 
+	imagesc(x_out,y_out,zi);
+	colormap(hot);
+	colorbar; 
         
     % provide force as output table
 	F = zi;
